crates/tribute-passes/src/native/snapshots/tribute_passes__native__rc_insertion__tests__snapshot_alloc_store_return.snap
---
source: crates/tribute-passes/src/native/rc_insertion.rs
expression: output
---
core.module @test {
  clif.func {sym_name = @f, type = core.func(core.ptr, core.i32)} {
    ^bb0(%0: core.i32):
      %1 = clif.iconst {value = 16} : core.i64
      %2 = clif.call %1 {callee = @__tribute_alloc} : core.ptr
      %3 = clif.iconst {value = 8} : core.i64
      %4 = clif.iadd %2, %3 : core.ptr
      clif.store %0, %4 {offset = 0}
      clif.return %4
  }
}
