crates/tribute-passes/src/native/snapshots/tribute_passes__native__rc_insertion__tests__snapshot_temporary_field_borrow.snap
---
source: crates/tribute-passes/src/native/rc_insertion.rs
expression: output
---
core.module @test {
  clif.func {sym_name = @f, type = core.func(core.i32, core.ptr)} {
    ^bb0(%0: core.ptr):
      %1 = tribute_rt.retain %0 : core.ptr
      %2 = clif.load %0 {offset = 8} : core.ptr
      %3 = clif.load %2 {offset = 0} : core.i32
      tribute_rt.release %0 {alloc_size = 0}
      clif.return %3
  }
}
